# component-elasticsearch

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  flake8.cfg  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md
component_config/sample-config/: config.json
es_builds/: test_functional.py
es_builds/basic_auth/: run.sh
es_builds/basic_https/: docker-compose.yml
es_builds/basic_https/certs/: cert.pem  elasticsearch.yml  key.pem  unencrypted-key.pem
scripts/: build_n_test.sh
src/: client.py  component.py  configuration.py  result.py
src/client/: es_client.py  ssh_client.py  ssh_tunnel.py  ssh_utils.py
src/legacy_client/: legacy_es_client.py  result.py  ssh_client.py
tests/: test_component.py  test_functional.py
tests/functional/01_basic_query/source/: set_up.py
tests/functional/01_basic_query/source/data/: config.json
tests/functional/02_filtered_query/source/: set_up.py
tests/functional/02_filtered_query/source/data/: config.json
tests/functional/03_include_metadata/source/data/: config.json
tests/functional/04_v8_basic_query/source/: set_up.py
tests/functional/04_v8_basic_query/source/data/: config.json
tests/functional/05_v8_filtered_query/source/: set_up.py
tests/functional/07_v8_dot_fields/source/: set_up.py
tests/functional/basic/source/: config.json
tests/functional/simple-full-load/: test_component.py  test_functional.py
(+9 files in other folders)
