[project]
name = "kds-team-ex-elasticsearch"
dynamic = ["version"]
description = "Keboola Connection Elasticsearch Extractor"
requires-python = "~=3.13.0"
dependencies = [
    "keboola.component>=1.4.3",
    "keboola.csvwriter",
    "keboola.json-to-csv",
    "elasticsearch~=8.0", #  beware of compatibility issues https://www.elastic.co/docs/reference/elasticsearch/clients/python#_compatibility
    "dateparser",
    "paramiko>=3.4.0",
    "retry",
    "furl",
    "cryptography>=36.0.2",
    "pydantic>=2.0.0",
    "flake8>=7.3.0",
    "keboola-datadirtest>=2.0.2",
    "keboola-utils>=1.1.0",
]

[dependency-groups]
dev = [
    "mock",
    "freezegun",
    "faker",
]
